--- a/jupyter/example.ipynb
+++ b/jupyter/example.ipynb
@@ -1048,6 +1048,26 @@
     "def max_of_three(a,b,c):\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7b35fbfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Active code page: 65001\n",
+      "Requirement already satisfied: pygame in d:\\python\\python39\\lib\\site-packages (2.6.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "!pip install pygame"
+   ]
   }
  ],
  "metadata": {
